--- a/client/dev/partials/projects/menu.html
+++ b/client/dev/partials/projects/menu.html
@@ -9,22 +9,22 @@
 
 				<div class="panel-collapse">
 					<div class="list-group">
-						<a ui-sref="main.project.logical_frame({projectId: project._id})" ui-sref-active="active" tooltip="{{'project.logical_frame_tooltip'|translate}}" class="list-group-item">
+						<a ui-sref="main.project.logical_frame({projectId: project._id})" ui-sref-active="active" class="list-group-item">
 							<i class="fa fa-building-o fa-fw"></i>
 							<span translate="shared.logical_frame"></span>
 						</a>
 
-						<a ui-sref="main.project.input_entities({projectId: project._id})" ui-sref-active="active" tooltip="{{'project.input_entities_tooltip'|translate}}" class="list-group-item">
+						<a ui-sref="main.project.input_entities({projectId: project._id})" ui-sref-active="active" class="list-group-item">
 							<i class="fa fa-map-marker fa-fw"></i>
 							<span translate="shared.input_entities"></span>
 						</a>
 
-						<a ui-sref="main.project.input_groups({projectId: project._id})" ui-sref-active="active" tooltip="{{'project.input_groups_tooltip'|translate}}" class="list-group-item">
+						<a ui-sref="main.project.input_groups({projectId: project._id})" ui-sref-active="active" class="list-group-item">
 							<i class="fa fa-map-marker fa-fw"></i>
 							<span translate="shared.input_groups"></span>
 						</a>
 
-						<a ui-sref="main.project.user_list" ui-sref-active="active" tooltip="{{'project.user_list_tooltip'|translate}}" class="list-group-item">
+						<a ui-sref="main.project.user_list" ui-sref-active="active" class="list-group-item">
 							<i class="fa fa-users fa-fw"></i>
 							<span translate="project.users"></span>
 						</a>
@@ -39,22 +39,22 @@
 
 				<div class="panel-collapse">
 					<div class="list-group">
-						<a ui-sref="main.project.forms({projectId: project._id})" ng-class="{active: $state.is('main.project.forms') || $state.is('main.project.form')}" tooltip="{{'project.input_forms_tooltip'|translate}}" class="list-group-item">
+						<a ui-sref="main.project.forms({projectId: project._id})" ng-class="{active: $state.is('main.project.forms') || $state.is('main.project.form')}" class="list-group-item">
 							<i class="fa fa-file-text-o fa-fw"></i>
 							<span translate="project.input_forms"></span>
 						</a>
 
-						<a ui-sref="main.project.input_list({projectId: project._id})" ui-sref-active="active" tooltip="{{'project.waiting_inputs_tooltip'|translate}}" class="list-group-item">
+						<a ui-sref="main.project.input_list({projectId: project._id})" ui-sref-active="active" class="list-group-item">
 							<i class="fa fa-clock-o fa-fw"></i>
 							<span translate="project.waiting_inputs"></span>
 						</a>
 
-						<a ui-sref="main.project.reporting({projectId: project._id})" ui-sref-active="active" tooltip="{{'project.reporting_tooltip'|translate}}" class="list-group-item">
+						<a ui-sref="main.project.reporting({projectId: project._id})" ui-sref-active="active" class="list-group-item">
 							<i class="fa fa-line-chart fa-fw"></i>
 							<span translate="shared.reporting"></span>
 						</a>
 
-						<a ui-sref="main.project.reporting_analysis_list({projectId: project._id})" ui-sref-active="active" tooltip="{{'project.reporting_analysis_tooltip'|translate}}" class="list-group-item">
+						<a ui-sref="main.project.reporting_analysis_list({projectId: project._id})" ui-sref-active="active" class="list-group-item">
 							<i class="fa fa-lightbulb-o fa-fw"></i>
 							<span translate="shared.reporting_analysis"></span>
 						</a>
